--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "plugin-sidebar",
+  "name": "blocks",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -18,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@wordpress/element": "^2.8.2",
     "@wordpress/scripts": "^3.4.0",
     "css-loader": "^3.1.0",
     "ignore-emit-webpack-plugin": "^2.0.2",
